git subrepo pull assembly
subrepo:
  subdir:   "assembly"
  merged:   "afc7e61f32"
upstream:
  origin:   "git@github.com:daisy/pipeline-assembly.git"
  branch:   "master"
  commit:   "815c3e0c9f"
git-subrepo:
  version:  "0.3.1"
  origin:   "???"
  commit:   "???"