@@ -93,7 +93,7 @@ rem # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # 
     )
 
     set LOCAL_CLASSPATH=%CLASSPATH%
-    set DEFAULT_JAVA_OPTS=-Xmx1G -XX:MaxPermSize=256M -Dcom.sun.management.jmxremote
+    set DEFAULT_JAVA_OPTS=-Dcom.sun.management.jmxremote
     set CLASSPATH=%LOCAL_CLASSPATH%;%PIPELINE2_BASE%\conf
     set DEFAULT_JAVA_DEBUG_OPTS=-Xdebug -Xnoagent -Djava.compiler=NONE -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005
 
